cha-pre-live-flux2/cha-eks-5b/namespaces/ssplat-qa/namespace-ssplat-qa.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: ssplat-qa
  name: ssplat-qa
