cha-pre-live-flux2/cha-eks-5b/namespaces/ssplat-qa/network-policy-apps.yaml
###################################
## Allow egress from ssplat-qa ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-ssplat-qa
  namespace: ssplat-qa
spec:
  podSelector: {}
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: ssplat-qa

#########################################
## Allow external http traffic egress  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-http-external
  namespace: ssplat-qa
spec:
  podSelector: {}
  egress:
  - ports:
    - port: 443
      protocol: TCP
    - port: 80
      protocol: TCP

#####################
## ICIS monitoring ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-icis-monitoring
  namespace: ssplat-qa
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: prometheus
      namespaceSelector:
        matchLabels:
          name: icis-monitoring

#####################
## Egress to Nexus ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-nexus-cha
  namespace: ssplat-qa
spec:
  podSelector: {}
  egress:
  - to:
    - ipBlock:
        cidr: 10.52.32.0/22
    ports:
    - protocol: TCP
      port: 8001

#####################################
## Ingress from Ingress Controller ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-ssplat-qa
  namespace: ssplat-qa
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: ssplat-qa
    - namespaceSelector:
        matchLabels:
          name: icis-ingress
